syntax = "proto3";
package cashmere;

import "name.proto";

message NewCalendarBookRequest{
  string manage_id = 1;
  string entity_id = 2;
  Name name = 3;
  string description = 4;
}
message NewCalendarBookResponse{
  string result = 1;
}