/*
Author: 闫刚 (yes7rose@sina.com)
cashmere.proto (c) 2020
Desc: 服务接口定义
Created:  2020-09-24T00:09:14.871Z
Modified: !date!
*/

syntax = "proto3";

package cashmere;

// 映像请求
message GetManageViewRequest{
  string manage_name =1;
}
// 映像返回
message GetManageViewResponse{
  string view_token =1;
}

// 管理权限
message ChangeManageReadRuleRequest {
  int32 manage_id = 1;
  string group_id = 2;
  string read_rule = 3;
}
message ChangeManageReadRuleResponse {
  string result = 1;
} 

message ChangeManageWriteRuleRequest {
  int32 manage_id = 1;
  string group_id = 2;
  string write_rule = 3;
}
message ChangeManageWriteRuleResponse {
  string result = 1;
} 

// 集合权限 
message ChangeCollectionReadRuleRequest {
  int32 manage_id = 1;
  string group_id = 2;
  string read_rule = 3;
}
message ChangeCollectionReadRuleResponse {
  string result = 1;
} 

message ChangeCollectionWriteRuleRequest {
  int32 manage_id = 1;
  string group_id = 2;
  string write_rule = 3;
}
message ChangeCollectionWriteRuleResponse {
  string result = 1;
} 

// 描写字段权限 
message ChangeFieldReadRuleRequest {
  int32 manage_id = 1;
  string group_id = 2;
  string field_id = 3;
  string read_rule = 4;
}
message ChangeFieldReadRuleResponse {
  string result = 1;
} 

message ChangeFieldRuleRequest {
  int32 manage_id = 1;
  string group_id = 2;
  string field_id = 3;
  string write_rule = 4;
}
message ChangeFieldRuleResponse {
  string result = 1;
} 
